add Chromebook section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,6 @@
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark" href="/windows">Windows</a>
     <a class="p-2 text-dark" href="/mac">Mac</a>
-    <!-- <a class="p-2 text-dark" href="/linux">Linux</a> -->
+    <a class="p-2 text-dark" href="/chromebook">Chromebook</a>
   </nav>
 </div>
