--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,5 +5,6 @@
     <a class="p-2 text-dark" href="/mac">Mac</a>
     <a class="p-2 text-dark" href="/linux">Linux</a>
     <a class="p-2 text-dark" href="/chromebook">Chromebook</a>
+    <!-- <a class="p-2 text-dark" href="/docker">Docker</a> -->
   </nav>
 </div>
