--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,3 +18,7 @@ body {
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
+
+.xkcd-img {
+  text-align: center;
+}
