--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container">
-    <span class="text-muted pull-left"><a href="https://wsvincent.com/about/">&copy; Will Vincent</a></span>
+    <span class="text-muted pull-left"><a href="https://wsvincent.com/about/">&copy; William Vincent</a></span>
     <span class="text-muted float-right"><a href="https://github.com/wsvincent/installpython3.com">Github</a></span>
   </div>
 </footer>
